feat: add endopoints in swagger contract and implements it in controllers
