# backend/biblioteca/src/main/java/br/com/biblioteca/controller/LoginController.java
@@ -1,0 +1,21 @@
+package br.com.biblioteca.controller;
+
+import lombok.RequiredArgsConstructor;
+import org.openapitools.api.LoginApi;
+import org.openapitools.model.LoginRequest;
+import org.openapitools.model.LoginResponse;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RequiredArgsConstructor
+@RestController
+@RequestMapping("/v1")
+public class LoginController implements LoginApi {
+
+    @Override
+    public ResponseEntity<LoginResponse> login(LoginRequest loginRequest) {
+        return ResponseEntity.status(HttpStatus.OK).body(new LoginResponse());
+    }
+}
