# backend/biblioteca/src/main/java/br/com/biblioteca/controller/UserController.java
@@ -1,0 +1,21 @@
+package br.com.biblioteca.controller;
+
+import lombok.RequiredArgsConstructor;
+import org.openapitools.api.UserApi;
+import org.openapitools.model.CreateUserRequest;
+import org.openapitools.model.UserResponse;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RequiredArgsConstructor
+@RestController
+@RequestMapping("/v1")
+public class UserController implements UserApi {
+
+    @Override
+    public ResponseEntity<UserResponse> createUser(CreateUserRequest createUserRequest) {
+        return ResponseEntity.status(HttpStatus.OK).body(new UserResponse());
+    }
+}
